--- a/.jshintrc
+++ b/.jshintrc
@@ -40,7 +40,7 @@
 	"eqeqeq" : true, // Require triple equals i.e. `===`.
 	"forin" : true, // Tolerate `for in` loops without `hasOwnPrototype`.
 	"immed" : true, // Require immediate invocations to be wrapped in parens e.g. `( function(){}() );`
-	"latedef" : true, // Prohibit variable use before definition.
+	"latedef" : false, // Prohibit variable use before definition.
 	"newcap" : true, // Require capitalization of all constructor functions e.g. `new F()`.
 	"noarg" : true, // Prohibit use of `arguments.caller` and `arguments.callee`.
 	"noempty" : true, // Prohibit use of empty blocks.
@@ -60,7 +60,7 @@
 	"boss" : false, // Tolerate assignments inside if, for & while. Usually conditions & loops are for comparison, not assignments.
 	"debug" : false, // Allow debugger statements e.g. browser breakpoints.
 	"eqnull" : false, // Tolerate use of `== null`.
-	"es5" : true, // Allow EcmaScript 5 syntax. // es5 is default https://github.com/jshint/jshint/issues/1411
+	//"es5" : true, // Allow EcmaScript 5 syntax. // es5 is default https://github.com/jshint/jshint/issues/1411
 	"esnext" : false, // Allow ES.next (ECMAScript 6) specific features such as `const` and `let`.
 	"evil" : false, // Tolerate use of `eval`.
 	"expr" : false, // Tolerate `ExpressionStatement` as Programs.
