--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "bugs": {
     "url": "https://github.com/bhoriuchi/dotprune/issues"
   },
-  "dependencies": {},
+  "dependencies": {
+  	"lodash": "^3.10.1"
+  },
   "scripts": {
     "test": "echo \\\"Error: no test specified\\\" && exit 1"
   },
